...
            "state" : "translated",
            "value" : "帶純色背景的 MP4，適用於僅支援影片的 App。"
          }
        }
      }
    },
    "Animate" : {
      "localizations" : {
        "zh-CN" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "播放动画"
          }
...
            "state" : "translated",
            "value" : "播放動畫"
          }
        }
      }
    },
    "Animated" : {
      "localizations" : {
        "zh-CN" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "动态"
          }
...
        }
      }
    },
    "Cached files" : {

    },
    "Calm" : {
      "extractionState" : "stale",
      "localizations" : {
        "zh-CN" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "平静"
...
        }
      }
    },
    "Can't Listen" : {

    },
    "Cancel" : {
      "localizations" : {
        "zh-CN" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "取消"
          }
...
            "state" : "translated",
            "value" : "無法開始"
          }
        }
      }
    },
    "Couldn’t Complete Action" : {
      "localizations" : {
        "zh-CN" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "无法完成操作"
          }
...
            "state" : "translated",
            "value" : "法律訊息"
          }
        }
      }
    },
    "Library" : {
      "localizations" : {
        "zh-CN" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "贴纸库"
          }
...
    "Oh no…" : {

    },
    "Oh, it's you… I'm so sleepy." : {

    },
    "OK" : {
      "localizations" : {
        "zh-CN" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "好"
          }
...
